feat(core): test ufw rules on core service
